# ChangeLog for media-plugins/audacious-plugins
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.91 2008/05/24 00:45:35 chainsaw Exp $

  24 May 2008; <chainsaw@gentoo.org> audacious-plugins-1.5.0.ebuild,
  audacious-plugins-1.5.1.ebuild:
  Do not try to install non-existent NEWS file. Closes bug #216234 by
  Arfrever Frehtes Taifersar Arahesis <Arfrever.FTA@GMail.Com>.

*audacious-plugins-1.5.1 (24 May 2008)

  24 May 2008; <chainsaw@gentoo.org> +audacious-plugins-1.5.1.ebuild:
  Version bump. Bugfixes, lots of bugfixes...

  12 May 2008; Markus Rothe <corsair@gentoo.org>
  audacious-plugins-1.4.5.ebuild:
  Stable on ppc64

  18 Apr 2008; Tony Vroon <chainsaw@gentoo.org>
  audacious-plugins-1.4.5.ebuild:
  Mark 1.4.6 stable on AMD64; tested on a mobile Core 2 Duo (nocona).

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  audacious-plugins-1.4.5.ebuild:
  sparc/x86 stable

*audacious-plugins-1.5.0 (14 Mar 2008)

  14 Mar 2008; Tony Vroon <chainsaw@gentoo.org>
  +audacious-plugins-1.5.0.ebuild:
  Version bump. D-Bus is a mandatory dependency. It will stay that way.

  21 Feb 2008; Tony Vroon <chainsaw@gentoo.org>
  audacious-plugins-1.4.4.ebuild, audacious-plugins-1.4.5.ebuild:
  Add missing libflac dependency, as pointed out by Laurent Bardin
  <laurent.bardin@gmail.com> in bug #208250.

*audacious-plugins-1.4.5 (02 Feb 2008)

  02 Feb 2008; Tony Vroon <chainsaw@gentoo.org>
  +audacious-plugins-1.4.5.ebuild:
  Version bump. Contains improved (stream) ICY metadata and HTTP redirect
  handling. The madplug (MP3) plugin is now more resilient against badly
  written ID3 tags.

  29 Jan 2008; Tony Vroon <chainsaw@gentoo.org>
  -audacious-plugins-1.3.3.ebuild, -audacious-plugins-1.3.4.ebuild,
  -audacious-plugins-1.3.5.ebuild, -audacious-plugins-1.4.1.ebuild,
  -audacious-plugins-1.4.2.ebuild:
  Remove now obsolete ebuilds.
