@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/audacious-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.91 2008/05/24 00:45:35 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.92 2008/05/27 10:01:59 chainsaw Exp $
+
+  27 May 2008; <chainsaw@gentoo.org> audacious-plugins-1.5.1.ebuild:
+  Depend on sufficiently new libvorbis, troubleshooted on IRC with Maarten
+  van Eeuwijk <mechno@gmail.com>.
 
   24 May 2008; <chainsaw@gentoo.org> audacious-plugins-1.5.0.ebuild,
   audacious-plugins-1.5.1.ebuild:
